syntax = "proto2";

package modbus_service;

message Version {
    required uint32 major = 1;
    required uint32 minor = 2;
    required uint32 subminor = 3;
}

message Event {
    required uint32 event = 1;
}

message EmeterOutput {
    required uint32 m_id = 1;
    required uint32 voltage = 2;
    required uint32 current = 3;
    required uint32 power = 4;
}

message EmeterError {
    required uint32 error_code = 1;
}

message IsochaError {
    required uint32 error_code = 1;
}

message IsochaIsoStatus {
    required uint32 status = 1;
}

message IsochaMeasureControl {
    required bool start = 1;
}

message NodeCommLost {
    required uint32 node = 1;
}
